--- a/travel/templates/index.html
+++ b/travel/templates/index.html
@@ -8,66 +8,67 @@
 <div class="container mt-5 mb-5">
    <div id="destinationCarousel" class="carousel slide" data-ride="carousel">
 
-       <!-- Indicators -->
-       <ol class="carousel-indicators">
-           {% for destination in destinations[:3] %}
-           <li data-target="#destinationCarousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}></li>
-           {% endfor %}
-       </ol>
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+         {% for destination in destinations[:3] %}
+         <li data-target="#destinationCarousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active" {%
+            endif %}></li>
+         {% endfor %}
+      </ol>
 
-       <!-- Slides -->
-       <div class="carousel-inner">
-           {% for destination in destinations[:3] %}
-           <div class="carousel-item {% if loop.first %}active{% endif %}">
-               <img src="{{ destination.image }}" class="d-block w-100 carousel-image" alt="Destination image for {{ destination.name }}">
-               <div class="carousel-caption d-none d-md-block">
-                   <h5>{{ destination.name }}</h5>
-                   <p>{{ destination.description }}</p>
-                   <a href="{{ url_for('destination.show', id=destination.id) }}" class="btn btn-danger">View Details</a>
-               </div>
-           </div>
-           {% endfor %}
-       </div>
+      <!-- Slides -->
+      <div class="carousel-inner">
+         {% for destination in destinations[:3] %}
+         <div class="carousel-item {% if loop.first %}active{% endif %}">
+            <img src="{{ destination.image }}" class="d-block w-100 carousel-image"
+               alt="Destination image for {{ destination.name }}">
+            <div class="carousel-caption d-none d-md-block">
+               <h5>{{ destination.name }}</h5>
+               <p>{{ destination.description }}</p>
+               <a href="{{ url_for('destination.show', id=destination.id) }}" class="btn btn-danger">View Details</a>
+            </div>
+         </div>
+         {% endfor %}
+      </div>
 
-       <!-- Controls -->
-       <a class="carousel-control-prev" href="#destinationCarousel" role="button" data-slide="prev">
-           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-           <span class="sr-only">Previous</span>
-       </a>
-       <a class="carousel-control-next" href="#destinationCarousel" role="button" data-slide="next">
-           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-           <span class="sr-only">Next</span>
-       </a>
+      <!-- Controls -->
+      <a class="carousel-control-prev" href="#destinationCarousel" role="button" data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#destinationCarousel" role="button" data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="sr-only">Next</span>
+      </a>
    </div>
 </div>
 <!-- Carousel End -->
 
 {% endblock %}
 
-{% block content %}   
-   <div class="container"> 
-      {% for destination in destinations %}
-         {% if loop.index0 % 3 == 0 %}
-         <div class="row d-flex flex-row mb-3"> <!-- Added mb-3 class for margin-bottom -->
-         {% endif %}
+{% block content %}
+<div class="container">
+   {% for destination in destinations %}
+   {% if loop.index0 % 3 == 0 %}
+   <div class="row d-flex flex-row mb-3"> <!-- Added mb-3 class for margin-bottom -->
+      {% endif %}
 
-         <div class="col-md-4 d-flex">
-            <div class="card mx-3 flex-fill h-100">
-               <img class="card-img-top" src="{{ destination.image }}" alt="destination picture">
-               <div class="card-body">
-                  <h5 class="card-title">{{ destination.name }}</h5>
-                  <p class="card-text">{{ destination.description }}</p>
-               </div>
-               <div class="card-footer">
-                  <a href="{{ url_for('destination.show', id=destination.id) }}" class="btn btn-primary"> View Details </a>
-               </div>
+      <div class="col-md-4 d-flex">
+         <div class="card mx-3 flex-fill h-100">
+            <img class="card-img-top" src="{{ destination.image }}" alt="destination picture">
+            <div class="card-body">
+               <h5 class="card-title">{{ destination.name }}</h5>
+               <p class="card-text">{{ destination.description }}</p>
+            </div>
+            <div class="card-footer">
+               <a href="{{ url_for('destination.show', id=destination.id) }}" class="btn btn-primary"> View Details </a>
             </div>
          </div>
+      </div>
 
-         {% if loop.index0 % 3 == 2 or loop.last %}
-         </div>
-         {% endif %}
-      {% endfor %}
+      {% if loop.index0 % 3 == 2 or loop.last %}
    </div>
+   {% endif %}
+   {% endfor %}
+</div>
 {% endblock %}
-
